--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@ code.inline {
 </div>
 
 <!-- ======================= PART 1 ======================= -->
-<div class="part-divider">
+<div class="part-divider" id="part1">
   <span class="tag rn">Part 1</span>
   <h2>React Native — Core / Bare Workflow</h2>
   <p>Master cross-platform mobile development from the ground up</p>
@@ -3123,7 +3123,7 @@ ToastModule.<span class="fn">show</span>(<span class="str">'Hello from native!'<
 </section>
 
 <!-- ======================= PART 2 ======================= -->
-<div class="part-divider">
+<div class="part-divider" id="part2">
   <span class="tag expo">Part 2</span>
   <h2>Expo — Managed Workflow + EAS</h2>
   <p>Streamline development and deploy with the power of Expo's ecosystem</p>
